--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <title>Example Cafe - community cafe in Newquay, Cornwall, UK</title>
 </head>
 <body>
-    <h1>EXAMPLE CAFE</h1>
-        <p>Welcome to the example cafe. We will be developing this site throughout the book.</p>
+    <img src="code/c04/sample_application/images/logo.gif" alt="example cafe logo" width="194" height="80">
+    <nav>
+        HOME
+        <a href="menu.html">MENU</a>
+        <a href="recipes.html">RECIPES</a>
+        <a href="opening.html">OPENING</a>
+        <a href="contact.html">CONTACT</a>
+    </nav>
+    <img src="code/c04/sample_application/images/scrambled_eggs.jpg" width="622" height="370" alt="Photo of scrambled
+eggs on an English muffin">
     <h2>A community cafe serving home cooked, locally sourced, organic food</h2>
         <p>With stunning views of the ocean, Example Cafe offers the perfect environment
         to unwind and recharge the batteries.</p>
