--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,51 @@
     <title>Example Cafe - community cafe in Newquay, Cornwall, UK</title>
 </head>
 <body>
-    <h1>EXAMPLE CAFE</h1>
-        <nav>
-            <a href="index.html">HOME</a>
-            <a href="menu.html">MENU</a>
-            <a href="recipes.html">RECIPES</a>
-            CONTACT
-        </nav>
+<a href="index.html"><img src="code/c04/sample_application/images/logo.gif" alt="example cafe logo" width="194" height="80"></a>
+    <nav>
+        <a href="index.html">HOME</a>
+        <a href="menu.html">MENU</a>
+        <a href="recipes.html">RECIPES</a>
+        <a href="opening.html">HOURS</a>
+        CONTACT
+    </nav>
         <p>Welcome to the Example Cafe. We will be developing this site throughout the book.</p>
     <h2>Contact</h2>
     <address>12 Sea View, Newquay, Cornwall, UK</address>
     <p><a href="http://maps.google.com/maps?q=newquay">Find us on Google Maps</a></p>
     <p><a href="mailto:info@examplecafe.com">Mail Example Cafe</a></p>
+    <table>
+        <caption>Opening hours for the Example Cafe</caption>
+        <tr>
+            <th></th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+            <th>Sunday</th>
+        </tr>
+        <tr>
+            <th>Breakfast</th>
+            <td>7:00am - 10:00am</td>
+            <td>7:00am - 10:00am</td>
+            <td>7:00am - 10:00am</td>
+            <td>7:00am - 10:00am</td>
+            <td>7:00am - 11:00am</td>
+            <td>7:00am - 11:30am</td>
+            <td>7:00am - 11:30am</td>
+        </tr>
+        <tr>
+            <th>Lunch</th>
+            <td>11:30am - 2:30pm</td>
+            <td>11:30am - 2:30pm</td>
+            <td>11:30am - 2:30pm</td>
+            <td>11:30am - 2:30pm</td>
+            <td>11:30am - 2:30pm</td>
+            <td>11:30am - 3:30pm</td>
+            <td>11:30am - 3:30pm</td>
+        </tr>
+    </table>
 </body>
 </html>
