--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Example Cafe - community cafe in Newquay, Cornwall, UK</title>
 </head>
 <body>
-    <img src="code/c04/sample_application/images/logo.gif" alt="example cafe logo" width="194" height="80">
+<a href="index.html"><img src="code/c04/sample_application/images/logo.gif" alt="example cafe logo" width="194" height="80"></a>
     <nav>
         HOME
         <a href="menu.html">MENU</a>
         <a href="recipes.html">RECIPES</a>
-        <a href="opening.html">OPENING</a>
+        <a href="opening.html">HOURS</a>
         <a href="contact.html">CONTACT</a>
     </nav>
     <img src="code/c04/sample_application/images/scrambled_eggs.jpg" width="622" height="370" alt="Photo of scrambled
