--- a/menu.html
+++ b/menu.html
@@ -5,12 +5,12 @@
     <title>Example Cafe - community cafe in Newquay, Cornwall, UK</title>
 </head>
 <body>
-    <h1>EXAMPLE CAFE</h1>
+<a href="index.html"><img src="code/c04/sample_application/images/logo.gif" alt="example cafe logo" width="194" height="80"></a>
     <nav>
         <a href="index.html">HOME</a>
         MENU
         <a href="recipes.html">RECIPES</a>
-        <a href="opening.html">OPENING</a>
+        <a href="opening.html">HOURS</a>
         <a href="contact.html">CONTACT</a>
     </nav>
     <p><a href="#starters">Starters</a> | <a href="#mains">Main Courses</a> | <a href="#desserts">Desserts</a></p>
