--- a/opening.html
+++ b/opening.html
@@ -5,6 +5,14 @@
     <title>Example Cafe - Opening Hours and Location</title>
 </head>
 <body>
+<a href="index.html"><img src="code/c04/sample_application/images/logo.gif" alt="example cafe logo" width="194" height="80"></a>
+    <nav>
+        <a href="index.html">HOME</a>
+        <a href="menu.html">MENU</a>
+        <a href="recipes.html">RECIPES</a>
+        HOURS
+        <a href="contact.html">CONTACT</a>
+    </nav>
     <h2>Opening hours</h2>
     <p>Details of opening hours and how to find us will go here</p>
 
