--- a/recipes.html
+++ b/recipes.html
@@ -5,6 +5,14 @@
     <title>Wrox Recipes - World's Best Scrambled Eggs</title>
 </head>
 <body>
+<a href="index.html"><img src="code/c04/sample_application/images/logo.gif" alt="example cafe logo" width="194" height="80"></a>
+    <nav>
+        <a href="index.html">HOME</a>
+        <a href="menu.html">MENU</a>
+        RECIPES
+        <a href="opening.html">HOURS</a>
+        <a href="contact.html">CONTACT</a>
+    </nav>
     <h1>Wrox Recipes - World's Best Scrambled Eggs</h1>
     <p>I adapted this recipe from a book called <a href="http://www.amazon.com/exec/obidos/tg/detail/~/0864119917/">
         <cite>Sydney Food</cite>
